[package]
name = "enhanced-gpa"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
solana-account-decoder = "2.0.7"
solana-client = "2.0.7"
solana-sdk = "2.0.7"
spl-token = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool", "async-connection-wrapper"] }
deadpool = "0.12.1"
url = "2.5.2"
derive_more = { version = "0.99.18"}
diesel_migrations = { version = "2.1.0", default-features = false, features = ["postgres"] }
chrono = "0.4.38"
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4.9.0"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
actix-cors = "0.7.0"
